--- a/games.html
+++ b/games.html
@@ -56,9 +56,9 @@
 	
 		<h2 class="fig">"Возвращение Красной Шапочки"</h2>
 		
-			<a href="#win1"><img class="img-1" src="img/red-5.jpg" width="312" height="186" alt=""></a>	
-			<a href="#win2"><img class="img-2" src="img/red-6.jpg" width="312" height="186" alt=""></a>		
-			<a href="#win3"><img class="img-3" src="img/red-7.jpg" width="312" height="186" alt=""></a>
+			<a href="#win1"><img class="img-1" src="img/red-5.jpg" width="234" height="140" alt=""></a>	
+			<a href="#win2"><img class="img-2" src="img/red-6.jpg" width="234" height="140" alt=""></a>		
+			<a href="#win3"><img class="img-3" src="img/red-7.jpg" width="234" height="140" alt=""></a>
 		
 		<p class="text-1 fig">
 		Эта визуальная новелла – собрание альтернативных реальностей. Как будут развиваться события и чем всё закончится – зависит от ваших решений! 
@@ -91,9 +91,9 @@
 	
 		<h2 class="fig">"Дикий остров"</h2>
 		
-			<a href="#win4"><img class="img-1" src="img/island-5.jpg" width="312" height="186" alt=""></a>	
-			<a href="#win5"><img class="img-2" src="img/island-6.jpg" width="312" height="186" alt=""></a>		
-			<a href="#win6"><img class="img-3" src="img/island-7.jpg" width="312" height="186" alt=""></a>
+			<a href="#win4"><img class="img-1" src="img/island-5.jpg" width="234" height="140" alt=""></a>	
+			<a href="#win5"><img class="img-2" src="img/island-6.jpg" width="234" height="140" alt=""></a>
+			<a href="#win6"><img class="img-3" src="img/island-7.jpg" width="234" height="140" alt=""></a>
 		
 		<p class="text-1 fig">
 		Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров. 
@@ -124,9 +124,9 @@
 	
 		<h2 class="fig">"Варвар и подземные пещеры"</h2>
 		
-			<a href="#win7"><img class="img-1" src="img/barbarian-5.jpg" width="312" height="186" alt=""></a>	
-			<a href="#win8"><img class="img-2" src="img/barbarian-6.jpg" width="312" height="186" alt=""></a>		
-			<a href="#win9"><img class="img-3" src="img/barbarian-7.jpg" width="312" height="186" alt=""></a>
+			<a href="#win7"><img class="img-1" src="img/barbarian-5.jpg" width="234" height="140" alt=""></a>	
+			<a href="#win8"><img class="img-2" src="img/barbarian-6.jpg" width="234" height="140" alt=""></a>		
+			<a href="#win9"><img class="img-3" src="img/barbarian-7.jpg" width="234" height="140" alt=""></a>
 		
 		<p class="text-1 fig">
 		Варвар и подземные пещеры -- это приключенческая визуальная новелла. 
@@ -272,6 +272,41 @@
 		
 		</div>
 		
+	<!-- Yandex.Metrika informer -->
+<a href="https://metrika.yandex.ru/stat/?id=40388305&amp;from=informer"
+target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/40388305/3_1_FFFFFFFF_FFFFFFFF_0_uniques"
+style="width:88px; height:31px; border:0; margin: -2px 20px 10px 83px;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="40388305" data-lang="ru" /></a>
+<!-- /Yandex.Metrika informer -->
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter40388305 = new Ya.Metrika({
+                    id:40388305,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    webvisor:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/40388305" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 	
 	</footer>
 	
