--- a/soft.html
+++ b/soft.html
@@ -103,7 +103,7 @@
 		Это лишь небольшой перечень того, что умеет  NLBB, который  к тому же постоянно развивается. Создать игру в  NLBB гораздо быстрее, удобнее и проще чем на бумаге, в Word или Excel. (Некоторые до сих пор предпочитают данные способы любому из существующих редакторов). Вы можете сделать набросок будущей игры, затем изменять, развивать и совершенствовать ваше творение и при этом, благодаря имеющемуся версионному контролю, быть уверенным в сохранности всех этапов разработки. Безусловно, существуют и другие редакторы для создания interactive fiction, но NLBB благодаря своей наглядности и простоте использования, будет полезен как начинающим, так и опытным игроделам.
 		</p>
 
-		<a class="nlbb-download-link" href="/1.html"><span>Скачать NLBB 0.10.x (Текущая версия)</span></a>
+		<a class="nlbb-download-link" href="http://nlbproject.com/dist/NLBB_WithJRE.zip"><span>Скачать NLBB 0.10.x (Текущая версия)</span></a>
 		
 		<hr>
 		
