--- a/contacts-eng.html
+++ b/contacts-eng.html
@@ -37,7 +37,7 @@
 					<li><a class="link-first active-header-link" href="index-eng.html">Main</a></li>
 					<li><a class="link" href="games-eng.html">Games</a></li>
 					<li><a class="link" href="soft-eng.html">Soft</a></li>
-					<li><a class="link" href="others-eng.html">Team</a></li>
+					<li><a class="link" href="team-eng.html">Team</a></li>
 					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
 					<li><a class="link" href="others-eng.html">Other</a></li>
 				</ul>
