--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
 					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
 					<li><a class="link" href="games.html">Игры</a></li>
 					<li><a class="link" href="soft.html">Программы</a></li>
-					<li><a class="link" href="others.html">Авторы</a></li>
+					<li><a class="link" href="team.html">Авторы</a></li>
 					<li><a class="link" href="contacts.html">Контакты</a></li>
 					<li><a class="link" href="others.html">Прочее</a></li>
 				</ul>
