--- a/games.html
+++ b/games.html
@@ -61,12 +61,15 @@
 			<a href="#win3"><img class="img-3" src="img/red-7.jpg" width="234" height="140" alt=""></a>
 		
 		<p class="text-1 fig">
-		Эта визуальная новелла – собрание альтернативных реальностей. Как будут развиваться события и чем всё закончится – зависит от ваших решений! 
-
+		Эта визуальная новелла – собрание альтернативных реальностей. Как будут развиваться события и чем всё закончится – зависит от ваших решений!
+		</p>
+		<p class="text-1 fig">
 		Побывайте в логове волка и разгадайте его секрет. Или попробуйте приручить дикого зверя. 
-
+		</p>
+		<p class="text-1 fig">
 		Съешьте пирожок с грибами и испытайте неизведанное, или накормите старушку, ведь грибная начинка – её любимая. 
-
+		</p>
+		<p class="text-1 fig">
 		Узнайте, наконец, какова истинная причина нападения волка на бабку Красной Шапочки. 
 		</p>
 		
@@ -97,7 +100,11 @@
 		
 		<p class="text-1 fig">
 		Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров. 
+		</p>
+		<p class="text-1 fig">
 		Вы можете отправиться на Дикий Остров с главными героями, чтобы вместе пережить полное опасностей приключение. Возьмите с собой одного или нескольких друзей, но помните, что все персонажи имеют как сильные, так и слабые стороны, а значит, от того кто с вами пойдёт, будет зависеть исход всего путешествия. Собираясь в дорогу, тщательно планируйте свои действия, берите только самое необходимое, любая мелочь может повлиять на события в пути. 
+		</p>
+		<p class="text-1 fig">
 		Наслаждайтесь природой Дикого Острова и берегитесь его обитателей!
 		</p>
 		
