--- a/games-eng.html
+++ b/games-eng.html
@@ -28,7 +28,7 @@
 					<li><a class="link-first active-header-link" href="index-eng.html">Main</a></li>
 					<li><a class="link" href="games-eng.html">Games</a></li>
 					<li><a class="link" href="soft-eng.html">Soft</a></li>
-					<li><a class="link" href="team-eng.html">Team</a></li>
+					<li><a class="link" href="others-eng.html">Team</a></li>
 					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
 					<li><a class="link" href="others-eng.html">Other</a></li>
 				</ul>
@@ -54,61 +54,68 @@
 	
 	<div class="white-block background-image-1">
 	
-		<h2 class="fig">"Возвращение Красной Шапочки"</h2>
+		<h2 class="fig">"Return of Red Riding Hood"</h2>
 		
 			<a href="#win1"><img class="img-1" src="img/red-5.jpg" width="234" height="140" alt=""></a>	
 			<a href="#win2"><img class="img-2" src="img/red-6.jpg" width="234" height="140" alt=""></a>		
 			<a href="#win3"><img class="img-3" src="img/red-7.jpg" width="234" height="140" alt=""></a>
 		
 		<p class="text-1 fig">
-		Эта визуальная новелла – собрание альтернативных реальностей. Как будут развиваться события и чем всё закончится – зависит от ваших решений! 
-
-		Побывайте в логове волка и разгадайте его секрет. Или попробуйте приручить дикого зверя. 
-
-		Съешьте пирожок с грибами и испытайте неизведанное, или накормите старушку, ведь грибная начинка – её любимая. 
-
-		Узнайте, наконец, какова истинная причина нападения волка на бабку Красной Шапочки. 
+		This visual novel is a collection of alternative realities. How events would turn out and how they end will depend on your choices. 
+		</p>
+		<p class="text-1 fig">
+		Visit wolf's den and solve his secret, or try to tame the wild beast. 
+		</p>
+		<p class="text-1 fig">
+		Eat a pasty with mushrooms and experience something new, or feed it to the old lady, because it's her favorite filling. 
+		</p>
+		<p class="text-1 fig">
+		Find out the real reason why Wolf attacked Red Riding Hood's Grandmother.
 		</p>
 		
-		<h2 class="fig">Особенности</h2>
+		<h2 class="fig">Main features</h2>
 		
 		<ul>
-			<li>Множество концовок.</li> 
-			<li>Триллер, мелодрама и комедия в одной игре.</li>
-			<li>Более 150 ярких 3D сцен.</li>
-			<li>Кроссплатформенность.</li>
-			<li>Карточки.</li>
-			<li>Достижения.</li>
-			<li>Steam Cloud.</li>
+			<li>Multiple endings</li> 
+			<li>Thriller, melodrama and comedy inside one game</li>
+			<li>More than 150 colorful 3D scenes</li>
+			<li>Cross-platform</li>
+			<li>Steam trading cards</li>
+			<li>Steam achievements</li>
+			<li>Steam Cloud</li>
 		</ul>
 	
-		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=741019644" target="blank"><span>Игра в Steam Greenlight</span></a>
+		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=741019644" target="blank"><span>Game in Steam Greenlight</span></a>
 	
 	</div>
 	<p><a name="island"></a></p>
 	<hr>
 	<div class="white-block background-image-2">
 	
-		<h2 class="fig">"Дикий остров"</h2>
+		<h2 class="fig">"Wild Island Quest"</h2>
 		
 			<a href="#win4"><img class="img-1" src="img/island-5.jpg" width="234" height="140" alt=""></a>	
-			<a href="#win5"><img class="img-2" src="img/island-6.jpg" width="234" height="140" alt=""></a>
+			<a href="#win5"><img class="img-2" src="img/island-6.jpg" width="234" height="140" alt=""></a>		
 			<a href="#win6"><img class="img-3" src="img/island-7.jpg" width="234" height="140" alt=""></a>
 		
 		<p class="text-1 fig">
-		Приключения на Диком Острове - это визуальная новелла о путешествии подростков на опасный остров. 
-		Вы можете отправиться на Дикий Остров с главными героями, чтобы вместе пережить полное опасностей приключение. Возьмите с собой одного или нескольких друзей, но помните, что все персонажи имеют как сильные, так и слабые стороны, а значит, от того кто с вами пойдёт, будет зависеть исход всего путешествия. Собираясь в дорогу, тщательно планируйте свои действия, берите только самое необходимое, любая мелочь может повлиять на события в пути. 
-		Наслаждайтесь природой Дикого Острова и берегитесь его обитателей!
+		Wild Island Quest is a visual novel about the adventures of the teenagers on a dangerous island. 
+		</p>
+		<p class="text-1 fig">
+		You can go to the Wild Island with the main characters and delve into a deadly adventure. Take one or a few friends with You, but keep in mind that all characters have their strengths and weaknesses, so the end of Your journey will depend on Your choice. Preparing for the trip, thoroughly plan your actions, take only what You really need. Any detail can be vital. 
+		</p>
+		<p class="text-1 fig">
+		Enjoy the Wild Island's nature and beware its inhabitants!
 		</p>
 		
-		<h2 class="fig">Ключевые особенности</h2>
+		<h2 class="fig">Main features</h2>
 		
 		<ul>
-			<li>Нелинейный сюжет.</li> 
-			<li>Несколько разных концовок.</li>
-			<li>Возможность отправиться в путешествие одному или с друзьями.</li>
-			<li>Каждый персонаж имеет сильные и слабые стороны, поэтому может как принести пользу, так и невольно навредить.</li>
-			<li>Уникальная картинка к каждой локации.</li>
+			<li>Non-linear plot</li> 
+			<li>Different endings</li>
+			<li>Possibility to travel alone or with friends</li>
+			<li>Every character has their strengths and weaknesses, and can give benefits or be a burden</li>
+			<li>Unique picture to every location</li>
 		</ul>
 	
 		<div class="steam fig">
@@ -122,45 +129,51 @@
 	<hr>
 	<div class="white-block background-image-3">
 	
-		<h2 class="fig">"Варвар и подземные пещеры"</h2>
+		<h2 class="fig">"The Barbarian and the Subterranean Caves"</h2>
 		
 			<a href="#win7"><img class="img-1" src="img/barbarian-5.jpg" width="234" height="140" alt=""></a>	
 			<a href="#win8"><img class="img-2" src="img/barbarian-6.jpg" width="234" height="140" alt=""></a>		
 			<a href="#win9"><img class="img-3" src="img/barbarian-7.jpg" width="234" height="140" alt=""></a>
 		
 		<p class="text-1 fig">
-		Варвар и подземные пещеры -- это приключенческая визуальная новелла. 
+		The Barbarian and the Subterranean Caves is an adventure visual novel about the heroic feats of the intrepid warrior Ragnar.  
 		</p>
 		<p class="text-1 fig">
-		Встречайте бесстрашного героя Рагнара и отправляйтесь вместе с ним на поиски приключений!
+		Now you can become the famed adventurer Ragnar and bravely seek out all-new original adventures in this exciting game.
 		</p>
 		<p class="text-1 fig">
-		Вам предстоит понять, кто друг, а кто враг, кто манипулирует вами, а кому действительно нужна ваша помощь. А также, разобраться в хитросплетениях замысловатых интриг и разоблачить коварного злодея. 
+		Delve into the mysteries of the caves and discover what lies in waiting below. Ready your sword: you will investigate sprawling, far-reaching webs of intrigues and unmask the cunning evildoer who stands in your way. 
 		</p>
 		<p class="text-1 fig">
-		Для этого у Рагнара имеется шесть навыков, каждый из которых по-своему влияет на развитие сюжета. Выбирайте три умения и – в путь! 
+		Can you tell a friend from a foe; who wants to manipulate you and who really needs your help?
 		</p>
 		<p class="text-1 fig">
-		Будьте готовы к опасностям, сложному моральному выбору и не позволяйте лжи опутать вас липкой сетью, докопайтесь до истины! 
+		Ragnar has six qualities you can choose from; each one influences the plot in its own way. But you must strategize well because you may only choose three.
 		</p>
 		<p class="text-1 fig">
-		Найдите наилучшую концовку и получите самую большую награду! 
+		Conquer all those who oppose you, overcome difficulties, let your conscience guide you through tough choices, and don't let lies ensnare you in a sticky web. 
+		</p>
+		<p class="text-1 fig">
+		Take control over your hero's destiny to unlock the multiple endings and get the richest rewards.  
+		</p>
+		<p class="text-1 fig">
+		Discover the truth in the darkest depths of the subterranean caves…  
 		</p>
 		
-		<h2 class="fig">Ключевые особенности</h2>
+		<h2 class="fig">Main features</h2>
 		
 		<ul>
-			<li>Нелинейный сюжет (в стиле серии книг «Выбери себе приключение»)</li> 
-			<li>Несколько уникальных концовок</li> 
-			<li>Более 300 иллюстраций</li> 
-			<li>Мозаичный сюжет, который полностью откроется только после прохождения нескольких веток повествования </li> 
-			<li>Кроссплатформенность (Windows, Mac, Linux)</li>  
-			<li>Карточки и значки Steam</li>
-			<li>Достижения</li> 
-			<li>Поддержка Steam Cloud</li> 
+			<li>Non-linear, choose-your-own-adventure plot</li> 
+			<li>Unique endings to find</li> 
+			<li>More than 300 detailed illustrations</li> 
+			<li>Mosaic plot that completely opens by only completing a few storylines</li> 
+			<li>Cross-platform compatibility (Windows, Mac, Linux)</li>  
+			<li>Steam trading cards and badges</li>
+			<li>Achievements</li> 
+			<li>Steam Cloud support</li> 
 		</ul>
 	
-		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=684708653"><span>Игра в Steam Greenlight</span></a>
+		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=684708653"><span>Game in Steam Greenlight</span></a>
 		
 	</div>
 	
