--- a/team-eng.html
+++ b/team-eng.html
@@ -6,7 +6,7 @@
 		<title>NLB project</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/style-team.css">
+		<link rel="stylesheet" type="text/css" href="css/style-team-eng.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 	
@@ -25,12 +25,12 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
-					<li><a class="link" href="games.html">Игры</a></li>
-					<li><a class="link" href="soft.html">Программы</a></li>
-					<li><a class="link" href="team.html">Авторы</a></li>
-					<li><a class="link" href="contacts.html">Контакты</a></li>
-					<li><a class="link" href="others.html">Прочее</a></li>
+					<li><a class="link-first active-header-link" href="index-eng.html">Main</a></li>
+					<li><a class="link" href="games-eng.html">Games</a></li>
+					<li><a class="link" href="soft-eng.html">Soft</a></li>
+					<li><a class="link" href="team-eng.html">Team</a></li>
+					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
+					<li><a class="link" href="others-eng.html">Other</a></li>
 				</ul>
 				
 			</nav>
