--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,8 @@
 	
 		<title>NLB project</title>
 		<meta charset="utf-8">
+		<meta name="description" content="Многогранные текстовые приключения с нелинейным сюжетом набирают популярность! Добро пожаловать на сайт инди-команды NLB project. Интерактивные миры для вас!">
+		<meta name="keywords" content="NLB project, nlb project, нлб прожект, НЛБ прожект, группа nlb project в вк, группа нлб прожект в вк, группа nlb project в фейсбуке, группа нлб прожект в фейсбуке, твиттер nlb project, твиттер нлб прожект, ютуб-канал nlb project, ютуб-канал нлб прожект">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-contacts.css">
 		<script src="//vk.com/js/api/openapi.js?122" type="text/javascript"></script>
