--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>NLB project</title>
 		<meta charset="utf-8">
 		<meta name="description" content="Многогранные текстовые приключения с нелинейным сюжетом набирают популярность! Добро пожаловать на сайт инди-команды NLB project. Интерактивные миры для вас!">
+		<meta name="keywords" content="NLB project, nlb project, нлб прожект, НЛБ прожект, игра возвращение красной шапочки, игра Возвращение Красной шапочки, игра дикий остров, игра Дикий остров, игра варвар и подземные пещеры, игра Варвар и подземные пещеры, инди-игры, Инди-игры">
+		<meta name=viewport content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
