--- a/team.html
+++ b/team.html
@@ -5,6 +5,8 @@
 	
 		<title>NLB project</title>
 		<meta charset="utf-8">
+		<meta name="description" content="Многогранные текстовые приключения с нелинейным сюжетом набирают популярность! Добро пожаловать на сайт инди-команды NLB project. Интерактивные миры для вас!">
+		<meta name="keywords" content="NLB project, nlb project, нлб прожект, НЛБ прожект, авторы Дикого острова, авторы дикого острова, Антон Колосов, Антоколос, антон колосов, антоколос">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-team.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
