--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 		
+		<style>
+		
+	    @media screen and (min-device-width: 1600px) {
+			div {width: 900px;}
+	    }
+	    @media screen and (min-device-width: 1280px) {
+			div {width: 900px;}
+	    }
+	    @media screen and (max-device-width: 1279px) {
+			div {width: auto;}
+	    }
+		
+		</style>
+		
 	</head>
 	
 	<body>
