--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
 	
 	<body>
 	
+	<style>
+   @media screen and (max-device-width: 1601px) {
+    div {font-size: 16px;}
+   }
+   @media screen and (max-device-width: 1281px) {
+    div {font-size: 18px;}
+   }
+   @media screen and (max-device-width: 1025px) {
+    div {font-size: 18px;}
+   }
+   @media screen and (max-device-width: 641px) {
+    div {font-size: 20px;}
+	}
+	@media screen and (max-device-width: 481px) {
+    div {font-size: 30px;}
+   }
+   @media screen and (max-device-width: 321px) {
+    div {font-size: 30px;}
+   }
+  </style>
+
 	
 	<header class="main-header clearfix" id="blfix">
 	
