--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
 	
 	<body>
 	
+	<style scoped>
+   @media screen and (max-device-width: 1601px) {
+    div {font-size: 16px;}
+   }
+   @media screen and (max-device-width: 1281px) {
+    div {font-size: 16px;}
+   }
+   @media screen and (max-device-width: 1025px) {
+    div {font-size: 16px;}
+   }
+   @media screen and (max-device-width: 641px) {
+    div {font-size: 20px;}
+	}
+	@media screen and (max-device-width: 481px) {
+    div {font-size: 30px;}
+   }
+   @media screen and (max-device-width: 321px) {
+    div {font-size: 30px;}
+   }
+  </style>
+
+	
 	<header class="main-header clearfix" id="blfix">
 	
 		<div class="fixed-menu">
