--- a/games-eng.html
+++ b/games-eng.html
@@ -20,13 +20,13 @@
 	
 		<div class="fixed-menu">
 	
-			<a href = "index.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
+			<a href = "index-eng.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
 		
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link-first active-header-link" href="index-eng.html">Main</a></li>
-					<li><a class="link" href="games-eng.html">Games</a></li>
+					<li><a class="link-first" href="index-eng.html">Main</a></li>
+					<li><a class="link active-header-link" href="games-eng.html">Games</a></li>
 					<li><a class="link" href="soft-eng.html">Soft</a></li>
 					<li><a class="link" href="others-eng.html">Team</a></li>
 					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
