--- a/team-eng.html
+++ b/team-eng.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Многогранные текстовые приключения с нелинейным сюжетом набирают популярность! Добро пожаловать на сайт инди-команды NLB project. Интерактивные миры для вас!">
 		<meta name="keywords" content="NLB project, nlb project, нлб прожект, НЛБ прожект, авторы Дикого острова, авторы дикого острова, Антон Колосов, Антоколос, антон колосов, антоколос">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/style-team.css">
+		<link rel="stylesheet" type="text/css" href="css/style-team-eng.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 	
@@ -22,17 +22,17 @@
 	
 		<div class="fixed-menu">
 	
-			<a href = "index.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
+			<a href = "index-eng.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
 		
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
-					<li><a class="link" href="games.html">Игры</a></li>
-					<li><a class="link" href="soft.html">Программы</a></li>
-					<li><a class="link" href="team.html">Авторы</a></li>
-					<li><a class="link" href="contacts.html">Контакты</a></li>
-					<li><a class="link" href="others.html">Прочее</a></li>
+					<li><a class="link-first" href="index-eng.html">Main</a></li>
+					<li><a class="link" href="games-eng.html">Games</a></li>
+					<li><a class="link" href="soft-eng.html">Soft</a></li>
+					<li><a class="link active-header-link" href="team-eng.html">Team</a></li>
+					<li><a class="link" href="contacts-eng.html">Contacts</a></li>
+					<li><a class="link" href="others-eng.html">Other</a></li>
 				</ul>
 				
 			</nav>
