--- a/index-eng.html
+++ b/index-eng.html
@@ -19,7 +19,7 @@
 	
 		<div class="fixed-menu">
 	
-			<a href = "index.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
+			<a href = "index-eng.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
 
 			<nav class="main-navigation">
 			
