--- a/team.html
+++ b/team.html
@@ -27,10 +27,10 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link-first active-header-link" href="index.html">Главная</a></li>
+					<li><a class="link-first" href="index.html">Главная</a></li>
 					<li><a class="link" href="games.html">Игры</a></li>
-					<li><a class="link" href="soft.html">Программы</a></li>
-					<li><a class="link" href="team.html">Авторы</a></li>
+					<li><a class="link" href="soft.html">Софт</a></li>
+					<li><a class="link active-header-link" href="team.html">Авторы</a></li>
 					<li><a class="link" href="contacts.html">Контакты</a></li>
 					<li><a class="link" href="others.html">Прочее</a></li>
 				</ul>
