--- a/index-eng.html
+++ b/index-eng.html
@@ -54,9 +54,9 @@
 			
 			
 			
-		<h2 class="block-1 fig">NLB project – команда инди-разработчиков из трёх человек.</h2>
+		<h2 class="block-1 fig">NLB project is an indie game developer team, consisting of three members.</h2>
 			
-		<p class="block-2 fig">В один прекрасный день мы решили делать игры. В данный момент наша цель – создание необычных, увлекательных игр, способных вызывать яркие эмоции. Пока что мы работаем в жанре ВН, но планируем попробовать себя и в других жанрах.</p>
+		<p class="block-2 fig">One day we decided to create games. Currently our goal is to create uncommon, fascinating games that can emotionalize gamers. Now we work in visual novel genre, but in future plan to try some other genres.</p>
 		
 		<hr>
 		
