--- a/contacts-eng.html
+++ b/contacts-eng.html
@@ -5,6 +5,8 @@
 	
 		<title>NLB project</title>
 		<meta charset="utf-8">
+		<meta name="description" content="Many-sided text adventures with non-linear plot become more popular! Welcome to website of NLB project - an indie game developer. Interactive worlds for you!">
+		<meta name="keywords" content="NLB project, nlb project, nlb project in vk, nlb project in facebook, twitter nlb project, youtube nlb project">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-contacts-eng.css">
 		<script src="//vk.com/js/api/openapi.js?122" type="text/javascript"></script>
