--- a/games-eng.html
+++ b/games-eng.html
@@ -5,6 +5,8 @@
 	
 		<title>NLB project</title>
 		<meta charset="utf-8">
+		<meta name="description" content="Many-sided text adventures with non-linear plot become more popular! Welcome to website of NLB project - an indie game developer. Interactive worlds for you!">
+		<meta name="keywords" content="NLB project, nlb project, game return of red riding hood, game Return of Red riding hood, game wild island quest, game Wild Island Quest, game the barbarian and the subterranen caves, game The Barbarian and the subterranen caves, indie-games, Indie-games">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-games-eng.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
