--- a/others.html
+++ b/others.html
@@ -6,7 +6,7 @@
 		<title>NLB project</title>
 		<meta charset="utf-8">
 		<meta name="description" content="Многогранные текстовые приключения с нелинейным сюжетом набирают популярность! Добро пожаловать на сайт инди-команды NLB project. Интерактивные миры для вас!">
-		<meta name="keywords" content="NLB project, nlb project, нлб прожект, НЛБ прожект, НЛББ, нлбб, Non-linear book builder, non-linear book builder, редактор для создания интерактивных игр">
+		<meta name="keywords" content="NLB project, nlb project, нлб прожект, НЛБ прожект, НЛББ, нлбб, Non-linear book builder, non-linear book builder, Я монстр, Приключения Алдара Косе, Приключения Безбородого обманщика">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-others.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
