--- a/soft-eng.html
+++ b/soft-eng.html
@@ -5,6 +5,8 @@
 	
 		<title>NLB project</title>
 		<meta charset="utf-8">
+		<meta name="description" content="Many-sided text adventures with non-linear plot become more popular! Welcome to website of NLB project - an indie game developer. Interactive worlds for you!">
+		<meta name="keywords" content="NLB project, nlb project, NLBB, nlbb, Non-linear book builder, non-linear book builder, editor for creating interactive games, if engine">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-soft-eng.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
