--- a/others-eng.html
+++ b/others-eng.html
@@ -5,8 +5,8 @@
 	
 		<title>NLB project</title>
 		<meta charset="utf-8">
-		<meta name="description" content="Многогранные текстовые приключения с нелинейным сюжетом набирают популярность! Добро пожаловать на сайт инди-команды NLB project. Интерактивные миры для вас!">
-		<meta name="keywords" content="NLB project, nlb project, нлб прожект, НЛБ прожект, НЛББ, нлбб, Non-linear book builder, non-linear book builder, редактор для создания интерактивных игр">
+		<meta name="description" content="Many-sided text adventures with non-linear plot become more popular! Welcome to website of NLB project - an indie game developer. Interactive worlds for you!">
+		<meta name="keywords" content="NLB project, nlb project, authors of Wild island quest, Anton Kolosov, Antokolos, antokolos, I'm a monster, Adventures of Aldar Kose, Adventures of Beardless trickster">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style-others-eng.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
