--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
       <div class="main-header__fixed-menu">
   
-        <a class="main-header__index-logo" href = "index.html"><img src="img/logo.png" width="107" height="60" alt="NLB-лого"></a>
+        <a href = "index.html"><img class="main-header__index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
 
         <nav class="main-nav">
       
