--- a/team-eng.html
+++ b/team-eng.html
@@ -27,7 +27,7 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link-first" href="index-eng.html">Main</a></li>
+					<li><a class="link-first" href="index.html">Main</a></li>
 					<li><a class="link" href="games-eng.html">Games</a></li>
 					<li><a class="link" href="soft-eng.html">Soft</a></li>
 					<li><a class="link active-header-link" href="team-eng.html">Team</a></li>
