--- a/games-eng.html
+++ b/games-eng.html
@@ -175,7 +175,11 @@
 			<li>Steam Cloud support</li> 
 		</ul>
 	
-		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=684708653"><span>Game in Steam Greenlight</span></a>
+		<div class="steam fig">
+		
+			<iframe src="http://store.steampowered.com/widget/490690/" frameborder="0" width="646" height="250"></iframe>
+	
+		</div>
 		
 	</div>
 	
