--- a/games.html
+++ b/games.html
@@ -168,8 +168,12 @@
 			<li>Достижения</li> 
 			<li>Поддержка Steam Cloud</li> 
 		</ul>
+		
+		<div class="steam fig">
+		
+			<iframe src="http://store.steampowered.com/widget/490690/" frameborder="0" width="646" height="250"></iframe>
 	
-		<a class="sort-column-1-link" href="http://steamcommunity.com/sharedfiles/filedetails/?id=684708653"><span>Игра в Steam Greenlight</span></a>
+		</div>
 		
 	</div>
 	
