--- a/contacts.html
+++ b/contacts.html
@@ -31,7 +31,7 @@
 	
 		<div class="fixed-menu">
 	
-			<a href = "index.html"><img class="index-logo" src="img/logo.png" width="50" height="50" alt="NLB-лого"></a>
+			<a href = "index-rus.html"><img class="index-logo" src="img/logo.png" width="50" height="50" alt="NLB-лого"></a>
 		
 			<nav class="main-navigation">
 			
