--- a/soft.html
+++ b/soft.html
@@ -23,7 +23,7 @@
 	
 		<div class="fixed-menu">
 	
-			<a href = "index.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
+			<a href = "index-rus.html"><img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого"></a>
 		
 			<nav class="main-navigation">
 			
