--- a/contacts-eng.html
+++ b/contacts-eng.html
@@ -64,13 +64,13 @@
 		
 		<div class="white-block clearfix">
 		
-			<h2 class="fig">наши контакты в социальных сетях</h2>
+			<h2 class="fig">OUR CONTACTS IN SOCIAL NETWORKS</h2>
 			
 			<hr>
 			
 			<div class="fb-group">
 			
-				<h3 class="fig">Группа в Facebook</h3>
+				<h3 class="fig">Group on Facebook</h3>
 			
 				<div class="fb-page" data-href="https://www.facebook.com/nlbproject/" data-tabs="timeline" data-width="300" data-height="450" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/nlbproject/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nlbproject/">NLB project</a></blockquote></div>
 				
@@ -78,7 +78,7 @@
 		
 			<div class="vk-group">
 			
-				<h3 class="fig">Группа в ВК</h3>
+				<h3 class="fig">Group on VK</h3>
 			
 				<div id="vk_groups"></div>
 				<script type="text/javascript">
@@ -89,7 +89,7 @@
 			
 			<div class="twit-group">
 			
-				<h3 class="fig">Блог в Twitter</h3>
+				<h3 class="fig">Blog on Twitter</h3>
 			
 				<a class="twitter-timeline" data-width="300" data-height="450" data-theme="light" href="https://twitter.com/nlbproject">Tweets by nlbproject</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				
@@ -97,7 +97,7 @@
 			
 			<div class="youtube-group">
 			
-				<h3 class="fig">Канал на YouTube</h3>
+				<h3 class="fig">YouTube channel</h3>
 			
 				<iframe width="300" height="170" src="https://www.youtube.com/embed/l_YfzyZ0Bf0" frameborder="0" allowfullscreen></iframe>
 			
