--- a/others.html
+++ b/others.html
@@ -184,7 +184,7 @@
 			</ol>
 			
 			<p class="block-3 fig">
-			P.S. Для активирования одной игры в одном аккаунте Стим нужен один ключ игры. Если у вас есть более одного ключа для одной игры в Стиме - можете подрить его кому-то или таки продать.
+			P.S. Для активирования одной игры в одном аккаунте Стим нужен один ключ игры. Если у вас есть более одного ключа для одной игры в Стиме - можете подарить его кому-то или таки продать.
 			</p>
 			
 		</div>
