--- a/index-rus.html
+++ b/index-rus.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    
+    <script src="//vk.com/js/api/openapi.js?122" type="text/javascript"></script>
     
   </head>
   
