--- a/index-rus.html
+++ b/index-rus.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <script src="//vk.com/js/api/openapi.js?122" type="text/javascript"></script>
+    <script type="text/javascript" src="//vk.com/js/api/openapi.js?146"></script>
     
   </head>
   
@@ -71,9 +71,10 @@
 	
 	<div class="vk-group">
 			
+		<!-- VK Widget -->
 		<div id="vk_groups"></div>
-			<script type="text/javascript">
-				VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "768", height: "450", color1: 'FFFFFF', color2: '000000', color3: '5E81A8'}, 85687194);
+		<script type="text/javascript">
+		VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: "300"}, 85687194);
 		</script>
 			
 	</div>
