--- a/index-rus.html
+++ b/index-rus.html
@@ -70,11 +70,13 @@
     <hr>
 	
 	<div class="vk-group">
+	
+		<h2 class="block-9 fig">Новости из нашего сообщества в ВК</h2>
 			
 		<!-- VK Widget -->
 		<div id="vk_groups"></div>
 		<script type="text/javascript">
-		VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: "300"}, 85687194);
+		VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: "300", width: "760"}, 85687194);
 		</script>
 			
 	</div>
