--- a/index-rus.html
+++ b/index-rus.html
@@ -76,7 +76,7 @@
 		<!-- VK Widget -->
 		<div id="vk_groups"></div>
 		<script type="text/javascript">
-		VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: "300", width: "760"}, 85687194);
+		VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "760", height: "300"}, 85687194);
 		</script>
 			
 	</div>
