--- a/index-rus.html
+++ b/index-rus.html
@@ -153,7 +153,7 @@
 		<!-- VK Widget -->
 		<div id="vk_groups"></div>
 		<script type="text/javascript">
-		VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "760", height: "450"}, 85687194);
+		VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, width: "760", height: "450", color3: '0F25AE'}, 85687194);
 		</script>
 			
 	</div>
