--- a/index.html
+++ b/index.html
@@ -139,6 +139,16 @@
 		
 		<hr>
 		
+		<div class="vk-group">
+	
+			<h2 class="block-9 fig">Latest news from our FB group</h2>
+			
+			<div class="fb-page" data-href="https://www.facebook.com/nlbproject/" data-tabs="timeline" data-width="760" data-height="450" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/nlbproject/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nlbproject/">NLB project</a></blockquote></div>
+			
+		</div>
+			
+		<hr>
+		
 		<div class="video-1">
 		
 			<h2 class="block-9 fig">Our trailers</h2>
