--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@
 	
 			<h2 class="block-9 fig">Latest news from our FB group</h2>
 			
-			<div class="fb-page" data-href="https://www.facebook.com/nlbproject/" data-tabs="timeline" data-width="760" data-height="450" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/nlbproject/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nlbproject/">NLB project</a></blockquote></div>
+			<div class="fb-center">
+			
+				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnlbproject%2F&tabs=timeline&width=760&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="760" height="450" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+			
+			</div>
 			
 		</div>
 			
