--- a/contacts-eng.html
+++ b/contacts-eng.html
@@ -272,7 +272,7 @@ style="width:88px; height:31px; border:0; margin: -2px 20px 10px 83px;" alt="Ð¯Ð
 	
 	<!-- JAVA SCRIPT -->
 	
-	<script src="js/script-contacts.js" type="text/javascript"></script>
+	<script src="js/script-contacts-eng.js" type="text/javascript"></script>
 	
 	</body>
 	
