--- a/soft.html
+++ b/soft.html
@@ -254,7 +254,7 @@ style="width:88px; height:31px; border:0; margin: -2px 20px 10px 83px;" alt="Ð¯Ð
 	
 	<!-- JAVA SCRIPT -->
 	
-	<script src="js/script-soft.js" type="text/javascript"></script>
+	<script src="js/script-soft-rus.js" type="text/javascript"></script>
 	
 	</body>
 	
