--- a/team.html
+++ b/team.html
@@ -261,7 +261,7 @@ style="width:88px; height:31px; border:0; margin: -2px 20px 10px 83px;" alt="Ð¯Ð
 	
 	<!-- JAVA SCRIPT -->
 	
-	<script src="js/script-team.js" type="text/javascript"></script>
+	<script src="js/script-team-rus.js" type="text/javascript"></script>
 	
 	</body>
 	
