--- a/soft.html
+++ b/soft.html
@@ -27,7 +27,7 @@
 			<nav class="main-navigation">
 			
 				<ul>
-					<li><a class="link-first" href="index.html">Главная</a></li>
+					<li><a class="link-first" href="index-rus.html">Главная</a></li>
 					<li><a class="link" href="games.html">Игры</a></li>
 					<li><a class="link active-header-link" href="soft.html">Софт</a></li>
 					<li><a class="link" href="team.html">Авторы</a></li>
