--- a/index-rus.html
+++ b/index-rus.html
@@ -355,6 +355,23 @@ style="width:88px; height:31px; border:0; margin: -2px 20px 10px 83px;" alt="Ð¯Ð
   <!-- JAVA SCRIPT -->
   
   <script src="js/script-index-rus.js" type="text/javascript"></script>
+
+  <script type="text/javascript">
+
+  jQuery(function(f){
+
+    var element = f('#blfix');
+
+    f(window).scroll(function(){
+
+        element['fade'+ (f(this).scrollTop() > 1000 ? 'Out': 'In')](500);          
+
+    });
+
+  });
+
+  </script>
+
   
 </body>
   
