--- a/games.html
+++ b/games.html
@@ -174,6 +174,13 @@
 			<iframe src="http://store.steampowered.com/widget/490690/" frameborder="0" width="646" height="250"></iframe>
 	
 		</div>
+
+		<div class="pb-app-box" data-theme="discover" data-lang="en">
+			<a href="https://play.google.com/store/apps/details?id=com.disney.wheresmywater2_goo" rel="nofollow" target="_blank">Where's My Water? 2 (Play Store) </a> |
+			<a href="https://42matters.com/app/android/com.disney.wheresmywater2_goo">Where's My Water? 2 (42matters)</a>
+		</div>
+
+		<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
 		
 	</div>
 	
