--- a/games.html
+++ b/games.html
@@ -176,7 +176,7 @@
 		</div>
 
 		<div class="pb-app-box" data-theme="discover" data-lang="en">
-			<a href="https://play.google.com/store/apps/details?id=com.disney.wheresmywater2_goo" rel="nofollow" target="_blank">Where's My Water? 2 (Play Store) </a> |
+			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">ВАРВАР И ПОДЗЕМНЫЕ ПЕЩЕРЫ</a> |
 			<a href="https://42matters.com/app/android/com.disney.wheresmywater2_goo">Where's My Water? 2 (42matters)</a>
 		</div>
 
