--- a/games.html
+++ b/games.html
@@ -177,7 +177,7 @@
 
 		<div class="pb-app-box" data-theme="discover" data-lang="en">
 			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">ВАРВАР И ПОДЗЕМНЫЕ ПЕЩЕРЫ</a> |
-			<a href="https://42matters.com/app/android/com.disney.wheresmywater2_goo">Where's My Water? 2 (42matters)</a>
+			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves">ВАРВАР И ПОДЗЕМНЫЕ ПЕЩЕРЫ</a>
 		</div>
 
 		<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
