--- a/games.html
+++ b/games.html
@@ -176,8 +176,8 @@
 		</div>
 
 		<div class="pb-app-box" data-theme="discover" data-lang="en">
-			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">ВАРВАР И ПОДЗЕМНЫЕ ПЕЩЕРЫ</a> |
-			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves">ВАРВАР И ПОДЗЕМНЫЕ ПЕЩЕРЫ</a>
+			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">Where's My Water? 2 (Play Store)</a> |
+			<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">Where's My Water? 2 (42matters)</a>
 		</div>
 
 		<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
