--- a/games.html
+++ b/games.html
@@ -171,13 +171,13 @@
 		
 		<div class="steam fig">
 		
-			<iframe src="http://store.steampowered.com/widget/490690/" frameborder="0" width="646" height="250"></iframe>
+			<iframe src="http://store.steampowered.com/widget/490690/" frameborder="0" width="646" height="225"></iframe>
 	
 		</div>
 
-		<div class="pb-app-box" data-theme="discover" data-lang="en">
-			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">Where's My Water? 2 (Play Store)</a> |
-			<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">Where's My Water? 2 (42matters)</a>
+		<div class="pb-app-box" data-theme="discover" data-lang="en" style="max-width: 650px !important">
+			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (Play Store)</a> |
+			<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (42matters)</a>
 		</div>
 
 		<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
