--- a/games.html
+++ b/games.html
@@ -175,7 +175,7 @@
 	
 		</div>
 
-		<div class="pb-app-box" data-theme="discover" data-lang="en" style="max-width: 650px !important">
+		<div class="pb-app-box fig" data-theme="discover" data-lang="en" style="max-width: 650px !important; margin: 0px 0px 20px 0px">
 			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (Play Store)</a> |
 			<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (42matters)</a>
 		</div>
