--- a/games.html
+++ b/games.html
@@ -175,9 +175,11 @@
 	
 		</div>
 
-		<div class="pb-app-box fig" data-theme="discover" data-lang="en" style="max-width: 650px !important; margin: 0px 0px 20px 0px">
-			<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (Play Store)</a> |
-			<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (42matters)</a>
+		<div class="fig">
+			<div class="pb-app-box" data-theme="discover" data-lang="en" style="max-width: 650px !important; margin: 0px 0px 20px 0px">
+				<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (Play Store)</a> |
+				<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (42matters)</a>
+			</div>
 		</div>
 
 		<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
