--- a/games.html
+++ b/games.html
@@ -176,7 +176,7 @@
 		</div>
 
 		<div class="fig">
-			<div class="pb-app-box" data-theme="discover" data-lang="en" style="max-width: 650px !important; margin: 0px 0px 20px 0px">
+			<div class="pb-app-box" data-theme="discover" data-lang="en" style="width: 650px !important; margin: 0px auto 30px;">
 				<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (Play Store)</a> |
 				<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (42matters)</a>
 			</div>
