--- a/games-eng.html
+++ b/games-eng.html
@@ -180,6 +180,13 @@
 			<iframe src="http://store.steampowered.com/widget/490690/" frameborder="0" width="646" height="250"></iframe>
 	
 		</div>
+
+		<div class="fig">
+			<div class="pb-app-box" data-theme="discover" data-lang="en" style="width: 650px !important; margin: 0px auto 30px;">
+				<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (Play Store)</a> |
+				<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (42matters)</a>
+			</div>
+		</div>
 		
 	</div>
 	
@@ -330,6 +337,8 @@ style="width:88px; height:31px; border:0; margin: -2px 20px 10px 83px;" alt="Ð¯Ð
 	</footer>
 	
 	<!-- JAVA SCRIPT -->
+
+	<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
 	
 	<script src="js/script-games-eng.js" type="text/javascript"></script>
 	
