--- a/games.html
+++ b/games.html
@@ -176,13 +176,11 @@
 		</div>
 
 		<div class="fig">
-			<div class="pb-app-box" data-theme="discover" data-lang="en" style="width: 650px !important; margin: 0px auto 30px;">
+			<div class="pb-app-box" data-theme="discover" data-lang="rus" style="width: 650px !important; margin: 0px auto 30px;">
 				<a href="https://play.google.com/store/apps/details?id=com.nlbhub.instead.barbariancaves" rel="nofollow" target="_blank">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (Play Store)</a> |
 				<a href="https://42matters.com/app/android/com.nlbhub.instead.barbariancaves">THE BARBARIAN AND THE SUBTERRANEAN CAVES 2 (42matters)</a>
 			</div>
 		</div>
-
-		<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
 		
 	</div>
 	
@@ -333,6 +331,8 @@ style="width:88px; height:31px; border:0; margin: -2px 20px 10px 83px;" alt="Ð¯Ð
 	</footer>
 	
 	<!-- JAVA SCRIPT -->
+
+	<script type="text/javascript" src="//widgets.42matters.com/widgets/pb-app-box/1/pb_load_app_box.js"></script>
 	
 	<script src="js/script-games-rus.js" type="text/javascript"></script>
 	
