--- a/index.html
+++ b/index.html
@@ -17,17 +17,23 @@
               <a href="index.html">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a href="photo.html">Фото и видео</a>
+              <a href="photo.html">Игры</a>
             </li>
             <li class="main-nav__item">
-              <a href="form.html">Форма отзыва</a>
+              <a href="form.html">Софт</a>
             </li>
             <li class="main-nav__item">
-              <a href="">HTML Academy</a>
+              <a href="">Авторы</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="">Контакты</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="">Прочее</a>
             </li>
           </ul>
         </div>
-      <a class="index-logo" href="index.html">
+      <!--<a class="index-logo" href="index.html">
         <picture>
           <source
             media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
@@ -35,10 +41,9 @@
             media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
           <img class="main-nav__logo" src="img/logo-sedona-mobile.svg" alt="City Of Sedona" width="100%" height="100%">
         </picture>
-      </a>
+      </a>-->
     </nav>
   <header class="page-header">
-    <img class="page-header__text-sedona" src="img/text-sedona-index.svg" alt="Welcome to Sedona" width="280" height="360">
   </header>
   <main>
     <section class="slogan">
@@ -54,9 +59,9 @@
         </div>
         <div class="feature__image">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/photo-city@1x.jpg 1x, img/photo-city@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/photo-city-tablet@1x.jpg 1x, img/photo-city-tablet@2x.jpg 2x">
-            <img src="img/photo-city-mobile@1x.jpg" srcset="img/photo-city-mobile@2x.jpg 2x"  alt="Фото настоящего городка">
+            <source media="(min-width: 1200px)" srcset="img/background-index.jpg 1x, img/photo-city@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/background-index.jpg 1x, img/photo-city-tablet@2x.jpg 2x">
+            <img src="img/background-index.jpg" srcset="img/photo-city-mobile@2x.jpg 2x"  alt="Заглавная картинка">
           </picture>
         </div>
         <div class="feature__list">
