--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
+  <body class="page">
   <div class="container">
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__items">
+            <li class="main-nav__item-logo">
+              <a href = "index-rus.html">
+                <img class="index-logo" src="img/logo.png" width="96" height="54" alt="NLB-лого">
+              </a>
+            </li>
             <li class="main-nav__item main-nav__item--active">
               <a href="index.html">Главная</a>
             </li>
