--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
       </a>-->
     </nav>
   <header class="page-header">
+    <a class="switch-lang eng-switch" href="index.html"><p>Eng</p></a>
+    <a class="switch-lang rus-switch switch-activated" href="index-rus.html"><p>Rus</p></a>
   </header>
-  <main>
+  <hr class="hr-first">
+  <main class="container-page">
     <section class="slogan">
       <h2 class="slogan__title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h2>
       <p class="slogan__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
